<?xml version="1.0" encoding="utf-8"?><!--主页页面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/ll_contest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line_main"
        android:layout_weight="1"
        android:orientation="vertical" />

    <View
        android:id="@+id/line_main"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/content"
        android:background="@color/rgb_eee"/>

    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/main_btn_home"
            android:gravity="center"
            android:selectAllOnFocus="true"
            android:text="@string/home"
            android:textColor="@drawable/main_button_color"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/main_live"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/main_btn_live"
            android:gravity="center"
            android:text="今日特价"
            android:textColor="@drawable/main_button_color"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/main_thesun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/main_btn_thesun"
            android:gravity="center"
            android:text="找券"
            android:textColor="@drawable/main_button_color"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/main_tipoff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/main_btn_tipoff"
            android:gravity="center"
            android:text="@string/tipoff"
            android:textColor="@drawable/main_button_color"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/main_own"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/main_btn_own"
            android:gravity="center"
            android:text="@string/own"
            android:textColor="@drawable/main_button_color"
            android:textSize="12dp" />
    </LinearLayout>


</RelativeLayout>
