<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/rgb_00000000">


            <com.handmark.pulltorefresh.library.PullToRefreshScrollView
                android:id="@+id/sv_sun"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <com.jude.rollviewpager.RollPagerView
                        android:id="@+id/iv_bigImg"
                        android:layout_width="match_parent"
                        android:layout_height="450dp" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_marginTop="25dp"
                        android:textColor="@color/rgb_464646"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_marginTop="15dp"
                        android:ellipsize="end"
                        android:lineSpacingExtra="10dp"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="22dp"
                        android:background="@color/rgb_eee" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_issuer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/rgb_464646"
                                android:textSize="16sp" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="bottom"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/thesun_time"
                                    android:textColor="@color/rgb_464646"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/tv_time"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textColor="@color/rgb_01b4b2"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/thesun_comment"
                                    android:textColor="@color/rgb_464646"
                                    android:textSize="16sp" />

                                <com.lechuang.jiabin.view.defineView.RatingBar
                                    android:id="@+id/rb_sun_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    app:starCount="5"
                                    app:starEmpty="@drawable/icon_xingxing"
                                    app:starFill="@drawable/icon_xingxings"
                                    app:starImageSize="16dp"
                                    app:starPadding="5dp"
                                    app:starStep="0"
                                    app:stepSize="Half" />

                            </LinearLayout>


                        </LinearLayout>

                        <com.lechuang.jiabin.view.defineView.XCRoundImageView
                            android:id="@+id/iv_issuerHeadImg"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/pic_morentouxiang" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/rgb_eee" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="23dp"
                        android:layout_marginRight="23dp"
                        android:layout_marginTop="70dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_num"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="精彩评论"
                            android:textColor="@color/rgb_464646"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_seeAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seeAll"
                            android:textColor="@color/rgb_ff6b80"
                            android:textSize="19sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/baoliao_chakanquanbu" />
                    </LinearLayout>

                    <com.lechuang.jiabin.view.defineView.MListView
                        android:id="@+id/lv_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:listSelector="@color/transparent" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:background="@color/rgb_eee" />


                </LinearLayout>

            </com.handmark.pulltorefresh.library.PullToRefreshScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@color/rgb_00000000"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/bg_fanhui" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"
                    android:src="@drawable/bg_fenxiang" />

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/rgb_eee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.lechuang.jiabin.view.defineView.XCRoundImageView
            android:id="@+id/tv_user_head"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/pic_morentouxiang" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/baoliao_pinglun_leirong"
            android:hint="我来说两句"
            android:paddingLeft="10dp"
            android:textColor="@color/rgb_b8b8b8"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发布"
            android:textColor="@color/rgb_b8b8b8"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
